texto de la seccion 1

--- a/Seccion 1/Sección 1.ipynb
+++ b/Seccion 1/Sección 1.ipynb
@@ -420,6 +420,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Se ve que hay 1462 datos y se tiene información como la humedad, velocidad del viento, presión media, dia de la semana, año, mes y la estación.\n",
+    "\n",
+    "No es correcto predecir la temperatura solo con el dia anterior, porque no hay correlación directa entre los comportamientos. Una dia puede que este soleado y la temperatura sea mayor y puede que el día siguiente este nublado y la temperatura baje drásticamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> b) Entrene un solo Árbol de Regresión de múltiples niveles para resolver el problema. Defina un Árbol **no regularizado** (como el que no tiene límites en su profundidad) y otro Árbol **regularizado** (variando los hiper-parámetros que prefiera, por ejemplo, los más comunes como la profundidad, el número mínimo de datos para realizar *split* o el número mínimo de datos en cada hoja). Además comente sobre la ventaja de usar un árbol de decisión respecto a la escala de los datos ¿Porqué no es necesario escalar los datos?"
    ]
   },
@@ -440,6 +449,13 @@
     "model_nr = do_Tree(X_train, Y_train)\n",
     "\n",
     "model_r_10_05 = do_Tree(X_train, Y_train, 10,min_samples_split=0.03) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La ventanja de utilizar árboles de desición es no tener que escalar los datos. Sin embargo, puede ser útil para la visualización de estos. No es necesario escalarlos dado que escalarlos solo los mueve en el espacio, entonces si bien el criterio para separarlos en dos grupos cambia númericamente, el resultado es el mismo."
    ]
   },
   {
@@ -530,6 +546,13 @@
     "plt.plot(y_val_hat, '.-' ,label=\"Pred values\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se ve una notoria diferencia en los resultados, en donde el regularizado tiene un rendimiento mucho mejor. Además el modelo regularizado visualmente es mucho más suave en comparación con el no regularizado."
    ]
   },
   {
@@ -627,6 +650,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "El uso de ensamblados deberia mejorar el rendimiento de ambos.No se vizualiza overfitting, porque al aumentar el número de estimadores el RMSE del set validación se mantiene constante."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> e) Entrene un ensamblado de árboles de múltiples niveles, mediante la técnica de **AdaBoost**, compare el Árbol **no regularizado** con el **regularizado** (*seteando los hiper-parámetros en base a lo experimentado anteriormente en d)* ¿Se visualiza *overfitting*? ¿Qué técnica utiliza la librería de sklearn, *re-muestrear* o *pesar* ejemplos? ¿Qué le parece más sensato?. Varíe la cantidad de árboles de decisión utilizados en el ensamblado (*n estimators*), realice un gráfico resumen del RMSE de entrenamiento y validación en función de este hiper-parámetro. Compare y analice con la técnica utilizada en d)."
    ]
   },
@@ -697,6 +727,13 @@
     "ax1[1].legend(loc=\"best\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " En caso del no regularizado se ve overfitting. Por otro lado el regularizado al igual que en caso anterior no se ve overfitting por los mismos motivos. Sk-learn utiliza pesar ejemplos. Dado que es difícil crear la noción de que sean modelos independientes, ambas parecen opciones sensatas. Por un lado, re muestreo genera una noción más marcada de \"independecia\" entre los modelos, pero no ocupa todo los datos para cada modelo. Por otro lado, el pesar ejemplos sí ocupa todos los datos, pero pierde un poco la noción de \"independencia\" entre los modelos."
    ]
   },
   {
@@ -791,6 +828,13 @@
     "ax1[1].legend(loc=\"best\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No se visualiza overfitting. Se ve que los resultados no varian substancialmente que con la otra técnica."
    ]
   },
   {
@@ -909,6 +953,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Se ve que ambos valores son muy similares y por lo tanto se puede utilizar como alternativa de la métrica de generalización."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> h) Defina otra forma de combinar los valores que entregan los ensamblados al hacer predicciones y compare con lo que se hace actualmente, por ejemplo *Bagging* realiza el voto de la mayoría para clasificación y promedio para regresión, *AdaBoost* realiza una combinación ponderada de cada clasificador dependiendo de su *habilidad* (desempeño para clasificar el conjunto de entrenamiento). Se puede inspirar desde clásicos estadísticos, como entregar el primer cuartíl ($Q_1$) si al ensamblado le cuesta predecir valores bajos, o el segundo cuartil ($Q_2$) o mediana para ser robusto a predicciones atípicas de modelos.  "
    ]
   },
@@ -942,6 +993,13 @@
     "list_predictions = [estimator.predict(X_val) for estimator in list_estimators]\n",
     "new_predictions = combine_predictions(list_predictions)\n",
     "print(\"RMSE val= \",RMSE(Y_val, new_predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso se decidio utilizar la mediana de las predicciones. "
    ]
   },
   {
@@ -989,6 +1047,13 @@
     "plt.plot(x, np.mean(X_val_est, axis=1))\n",
     "plt.fill_between(x, interv_val[:,0], interv_val[:,1], color='r', alpha=.55)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se ve que las prediciones del modelo caen dentro del intervalo de confianza, por lo que se reafirma la validez del modelo."
    ]
   },
   {
